--- a/style/estilo.css
+++ b/style/estilo.css
@@ -65,9 +65,11 @@ header > p{
     font-family: var(--fonte-padrao);
     font-size: 1.2em;
     max-width: 500px;
+    padding-right: 10px;
+    padding-left: 10px;
     margin: auto;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.548);
-    margin-bottom: 20px;
+    padding-bottom: 50px;
 }
 
 nav{
